txt-output/96.txt
RAW FILE BEING COMPILED: 
---------------------------------------

module Main where

import Data.Char

-- Problem: 3 should be of type Bool
v60 = \f y x -> f (y x) (y 3) (not x)                         

main :: IO ()
main = putStrLn "hello world"

OUTPUT FROM GHC v 6.10.4: 
---------------------------------------

﻿C:\ghc\ghc-6.10.4\bin\ghc.exe : 
At line:1 char:1
+ C:\ghc\ghc-6.10.4\bin\ghc.exe ill-typed\96.hs *> aLog.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
ill-typed\96.hs:6:27:
    No instance for (Num Bool)
      arising from the literal `3' at ill-typed\96.hs:6:27
    Possible fix: add an instance declaration for (Num Bool)
    In the first argument of `y', namely `3'
    In the second argument of `f', namely `(y 3)'
    In the expression: f (y x) (y 3) (not x)


OUTPUT FROM GHC v 9.2.5: 
---------------------------------------

﻿[1 of 1] Compiling Main             ( ill-typed\96.hs, ill-typed\96.o )
C:\ghc\ghc-9.2.5\bin\ghc.exe : 
At line:1 char:1
+ C:\ghc\ghc-9.2.5\bin\ghc.exe ill-typed\96.hs *> bLog.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
ill-typed\96.hs:6:28: error:
    * No instance for (Num Bool) arising from the literal `3'
    * In the first argument of `y', namely `3'
      In the second argument of `f', namely `(y 3)'
      In the expression: f (y x) (y 3) (not x)
  |
6 | v60 = \f y x -> f (y x) (y 3) (not x)                         
  |                            ^
